src/main/metadata/objects/FMMarketTrigger__mdt.object
<CustomObject>
    <description>It contains market specific handler for FM countries.</description>
    <fields>
        <fullName>ClassName__c</fullName>
        <description>It contains className of triggerHandler.</description>
        <label>ClassName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>It contains Market code.</description>
        <label>Market</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject__c</fullName>
        <description>It contains sObject Name.</description>
        <label>sObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FMMarketTrigger</label>
    <pluralLabel>FMMarketTriggers</pluralLabel>
</CustomObject>